fixed deep learning page

--- a/templates/deepLearning.html
+++ b/templates/deepLearning.html
@@ -43,9 +43,9 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
-                        <li class="scroll-to-section"><a href="#gd">What is Gradient Decent?</a></li>
-                        <li class="scroll-to-section"><a href="#services">Services</a></li>
-                        <li class="scroll-to-section"><a href="#frequently-question">Frequently Questions</a></li>
+                        <li class="scroll-to-section"><a href="#DL">Machine Learning?</a></li>
+                        <li class="scroll-to-section"><a href="#DL2">Applications</a></li>
+                        <li class="scroll-to-section"><a href="#DL3">Development</a></li>
                         <li class="submenu">
                             <a href="javascript:;">Optimizations</a>
                             <ul>
@@ -83,36 +83,41 @@
 <div id="course">
 <section id="DL">
     <h2 align="center">What is Deep Learning?</h2>
-   <h5> <br>Deep learning is an artificial intelligence (AI) function that imitates the workings of the human brain in processing data and creating patterns for use in decision making. Deep learning is a subset of machine learning in artificial intelligence that has networks capable of learning unsupervised from data that is unstructured or unlabeled. Also known as deep neural learning or deep neural network.
-   </h5><br><center><img src="assets/images/DeepLearning.png">
-    <h3 align="center">Applications of Deep Learning</h3> 
-   <h5>
-        A few years ago, we would’ve never imagined deep learning applications to bring us self driving cars and virtual assistants like Alexa, Siri and Google Assistant. But today, these creations are part of our everyday life. Deep Learning continues to fascinate us with its endless possibilities such as fraud detection and pixel restoration. Let us further understand the applications of deep learning across industries.
-    </h5>
-    <h3 align="center">What helped machine learning develop right now?</h3> 
-    <br><center><img src="assets/images/aplicationsDeep.png">
-    <h5>
-            - Big Data : Larger Datasets, Easier Collection &Storage<br>
-            - Hardware : Graphics Processing Units (GPUs), Massively Parallelizable<br>
-            - Softawre : Improved Techniques, New Models,Toolboxes (such as TensorFlow)
-    </h5>
-    <br><center><img src="assets/images/timelineDeep.png">
-
+    <br>
+        <div class="row">
+            <div class="left-text col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix">
+                <h5> <br><br><br>Deep learning is an artificial intelligence (AI) function that imitates the workings of the human brain in processing data and creating patterns for use in decision making. Deep learning is a subset of machine learning in artificial intelligence that has networks capable of learning unsupervised from data that is unstructured or unlabeled. Also known as deep neural learning or deep neural network.
+                </h5>
+            </div>
+            <div class="right-image col-lg-7 col-md-12 col-sm-12 mobile-bottom-fix-big" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
+                <img src="assets/images/DeepLearning.png" class="rounded img-fluid d-block mx-auto" alt="App">
+            </div>
+        </div>
+        <br>
 </section>
+    <section class="section" id="DL2">
+    <h3 align="center">Applications of Deep Learning</h3>
+        <br>
+        <div class="row">
+            <div class="left-text col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix">
+                <h5>
+                    <br><br><br><br><br>A few years ago, we would’ve never imagined deep learning applications to bring us self driving cars and virtual assistants like Alexa, Siri and Google Assistant. But today, these creations are part of our everyday life. Deep Learning continues to fascinate us with its endless possibilities such as fraud detection and pixel restoration. Let us further understand the applications of deep learning across industries.
+                </h5>
+            </div>
+            <div class="right-image col-lg-7 col-md-12 col-sm-12 mobile-bottom-fix-big" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
+                <img src="assets/images/aplicationsDeep.png" class="rounded img-fluid d-block mx-auto" alt="App">
+        </div>
+        <br>
 
-<section class="section" id="about2">
+    </section>
+    <section class="section" id="DL3">
+        <table>
+            <tr>
+                <img src="assets/images/timelineDeep.png" class="rounded img-fluid d-block mx-auto" alt="App">
+            </tr>
+        </table>
 
-        <iframe src="../viewer/viewerGD.html" width="100%" height="700" scrolling="no"> </iframe>
-
-</section>
-
-<section class="section" id="about3">
-    <br><br><br><br><br><br>ljasdlkfjsajfjasjlfjsf<br><br><br>
-</section>
-
-<section class="section" id="about4">
-    <iframe src="../viewer/viewerSVM.html" width="100%" height="700" scrolling="no"> </iframe>
-</section>
+    </section>
 </div>
 
 
