--- a/templates/deepLearning.html
+++ b/templates/deepLearning.html
@@ -45,7 +45,14 @@
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
                         <li class="scroll-to-section"><a href="#DL">Machine Learning?</a></li>
                         <li class="scroll-to-section"><a href="#DL2">Applications</a></li>
-                        <li class="scroll-to-section"><a href="#DL3">Development</a></li>
+                        <li class="scroll-to-section"><a href="#DL3">Timeline</a></li>
+                        <li class="scroll-to-section"><a href="#DL4">Development</a></li>
+                        <li class="submenu">
+                            <a href="javascript:;">Introduction</a>
+                            <ul>
+                                <li><a href="">Deep Learning</a></li>
+                            </ul>
+                        </li>
                         <li class="submenu">
                             <a href="javascript:;">Optimizations</a>
                             <ul>
@@ -96,7 +103,7 @@
         <br>
 </section>
     <section class="section" id="DL2">
-    <h3 align="center">Applications of Deep Learning</h3>
+    <h2 align="center">Applications of Deep Learning</h2>
         <br>
         <div class="row">
             <div class="left-text col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix">
@@ -106,17 +113,30 @@
             </div>
             <div class="right-image col-lg-7 col-md-12 col-sm-12 mobile-bottom-fix-big" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                 <img src="assets/images/aplicationsDeep.png" class="rounded img-fluid d-block mx-auto" alt="App">
+            </div>
         </div>
         <br>
 
     </section>
     <section class="section" id="DL3">
+
         <table>
             <tr>
                 <img src="assets/images/timelineDeep.png" class="rounded img-fluid d-block mx-auto" alt="App">
             </tr>
         </table>
 
+    </section>
+    <section class="section" id="DL4">
+        <br>
+        <h2 align="center">What helped machine learning develop right now?</h2>
+        <h5>
+            <br><br><br>
+            - Big Data : Larger Datasets, Easier Collection &Storage<br><br>
+            - Hardware : Graphics Processing Units (GPUs), Massively Parallelizable<br><br>
+            - Softawre : Improved Techniques, New Models,Toolboxes (such as TensorFlow)
+            <br><br><br><br><br>
+        </h5>
     </section>
 </div>
 
