--- a/templates/deepLearning.html
+++ b/templates/deepLearning.html
@@ -46,11 +46,10 @@
                         <li class="scroll-to-section"><a href="#DL">Machine Learning?</a></li>
                         <li class="scroll-to-section"><a href="#DL2">Applications</a></li>
                         <li class="scroll-to-section"><a href="#DL3">Timeline</a></li>
-                        <li class="scroll-to-section"><a href="#DL4">Development</a></li>
                         <li class="submenu">
-                            <a href="javascript:;">Introduction</a>
+                            <a href="javascript:;">Intro</a>
                             <ul>
-                                <li><a href="">Deep Learning</a></li>
+                                <li><a href="deepLearning.html">Deep Learning</a></li>
                             </ul>
                         </li>
                         <li class="submenu">
