--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,12 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="#about">Functionality</a></li>
-                            <li class="scroll-to-section"><a href="#services">Services</a></li>
-                            <li class="scroll-to-section"><a href="#frequently-question">About</a></li>
+                            <li class="submenu">
+                                <a href="javascript:;">Introduction</a>
+                                <ul>
+                                    <li><a href="deepLearning.html">Deep Learning</a></li>
+                                </ul>
+                            </li>
                             <li class="submenu">
                                 <a href="javascript:;">Optimizations</a>
                                 <ul>
