--- a/templates/deepLearning.html
+++ b/templates/deepLearning.html
@@ -43,9 +43,9 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
-                        <li class="scroll-to-section"><a href="#DL">Machine Learning?</a></li>
-                        <li class="scroll-to-section"><a href="#DL2">Applications</a></li>
-                        <li class="scroll-to-section"><a href="#DL3">Timeline</a></li>
+                        <li class="scroll-to-section"><a href="#course">Machine Learning?</a></li>
+                        <li class="scroll-to-section"><a href="#course2">Applications</a></li>
+                        <li class="scroll-to-section"><a href="#course3">Timeline</a></li>
                         <li class="submenu">
                             <a href="javascript:;">Intro</a>
                             <ul>
@@ -86,8 +86,8 @@
 
 
 <!-- ***** Features Big Item Start ***** -->
-<div id="course">
-<section id="DL">
+
+<section id="course">
     <h2 align="center">What is Deep Learning?</h2>
     <br>
         <div class="row">
@@ -101,13 +101,13 @@
         </div>
         <br>
 </section>
-    <section class="section" id="DL2">
+    <section id="course2">
     <h2 align="center">Applications of Deep Learning</h2>
         <br>
         <div class="row">
             <div class="left-text col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix">
                 <h5>
-                    <br><br><br><br><br>A few years ago, we would’ve never imagined deep learning applications to bring us self driving cars and virtual assistants like Alexa, Siri and Google Assistant. But today, these creations are part of our everyday life. Deep Learning continues to fascinate us with its endless possibilities such as fraud detection and pixel restoration. Let us further understand the applications of deep learning across industries.
+                    <br><br><br>A few years ago, we would’ve never imagined deep learning applications to bring us self driving cars and virtual assistants like Alexa, Siri and Google Assistant. But today, these creations are part of our everyday life. Deep Learning continues to fascinate us with its endless possibilities such as fraud detection and pixel restoration. Let us further understand the applications of deep learning across industries.
                 </h5>
             </div>
             <div class="right-image col-lg-7 col-md-12 col-sm-12 mobile-bottom-fix-big" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
@@ -115,9 +115,8 @@
             </div>
         </div>
         <br>
-
     </section>
-    <section class="section" id="DL3">
+    <section id="course3">
 
         <table>
             <tr>
@@ -126,7 +125,7 @@
         </table>
 
     </section>
-    <section class="section" id="DL4">
+    <section class="section" id="course4">
         <br>
         <h2 align="center">What helped machine learning develop right now?</h2>
         <h5>
@@ -137,7 +136,7 @@
             <br><br><br><br><br>
         </h5>
     </section>
-</div>
+
 
 
 
