styled the gd intro page

--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -1240,6 +1240,7 @@ contact
 */
 
 #contact-us .container-fluid {
+	color: white;
   padding-right: 0px;
   padding-left: 0px;
   overflow-x: hidden;
