--- a/templates/deepLearning.html
+++ b/templates/deepLearning.html
@@ -47,7 +47,7 @@
                         <li class="scroll-to-section"><a href="#course2">Applications</a></li>
                         <li class="scroll-to-section"><a href="#course3">Timeline</a></li>
                         <li class="submenu">
-                            <a href="javascript:;">Intro</a>
+                            <a href="javascript:;">Introduction</a>
                             <ul>
                                 <li><a href="deepLearning.html">Deep Learning</a></li>
                             </ul>
@@ -55,6 +55,7 @@
                         <li class="submenu">
                             <a href="javascript:;">Optimizations</a>
                             <ul>
+                                <li><a href="intro.html">Introduction</a></li>
                                 <li><a href="gradient%20decent.html">Gradient Decent</a></li>
                                 <li><a href="">Newton</a></li>
                             </ul>
