--- a/templates/intro.html
+++ b/templates/intro.html
@@ -43,19 +43,20 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
-                        <li class="scroll-to-section"><a href="#course">intro</a></li>
-                        <li class="scroll-to-section"><a href="#course2">Perceptron</a></li>
-                        <li class="scroll-to-section"><a href="#course3">optimize</a></li>
-                        <li class="scroll-to-section"><a href="#course4">Demo</a></li>
+                        <li class="scroll-to-section"><a href="#course2">intro</a></li>
+                        <li class="scroll-to-section"><a href="#course">Perceptron</a></li>
+                        <li class="scroll-to-section"><a href="#course4">optimize</a></li>
+                        <li class="scroll-to-section"><a href="#course3">Demo</a></li>
                         <li class="submenu">
                             <a href="javascript:;">Introduction</a>
                             <ul>
-                                <li><a href="">Deep Learning</a></li>
+                                <li><a href="deepLearning.html">Deep Learning</a></li>
                             </ul>
                         </li>
                         <li class="submenu">
                             <a href="javascript:;">Optimizations</a>
                             <ul>
+                                <li><a href="intro.html">Introduction</a></li>
                                 <li><a href="gradient%20decent.html">Gradient Decent</a></li>
                                 <li><a href="">Newton</a></li>
                             </ul>
@@ -88,7 +89,7 @@
 
 <!-- ***** Features Big Item Start ***** -->
 
-<section id="course">
+<section id="course2">
     <br>
                <center> <h2>Overview</h2></center>
     <div class="row">
@@ -105,7 +106,7 @@
     </div>
         <br>
 </section>
-    <section class="section" id="course2">
+    <section class="section" id="course">
         <br>
         <br>
         <center><h2>Example:Perceptron</h2></center>
@@ -132,7 +133,7 @@
         <br>
 
     </section>
-    <section class="section" id="course3">
+    <section class="section" id="course4">
         <center><h2>how to optimaize</h2></center><br>
         <h5>How are going to obtain w? In the case of perceptron, we are going to define the following loss function:</h5>
         <table>
@@ -159,7 +160,7 @@
             <br><br>The L(w) we now have is a real valued function of two variables and can be optimized as such. A w for which L decreases represents an improved classifier over the training set.
 </h5>
     </section>
-    <section class="section" id="course4">
+    <section class="section" id="course3">
         <br>
         <center><h2>how to optimaize</h2></center>
         <br>
