--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,7 @@
                             <li class="submenu">
                                 <a href="javascript:;">Optimizations</a>
                                 <ul>
+                                    <li><a href="intro.html">Introduction</a></li>
                                     <li><a href="gradient%20decent.html">Gradient Decent</a></li>
                                     <li><a href="">Newton</a></li>
                                 </ul>
