--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -86,7 +86,7 @@
     <a> x: </a><input class="contact-field" id = "x" name="x" placeholder="x">
     <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y">
     <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs">
-    <select id="opt" >
+    <select class="contact-field" id="opt" >
         <option value="SGD">SGD</option>
         <option value="MomentumSGD">MomentumSGD</option>
         <option value="Newton">Newton</option>
