--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -96,7 +96,7 @@
 </div>
 <script>
     document.getElementById("paramForm").style.display = "none";
-    document.getElementById("opt").value = "{{opt}}";
+    document.getElementById("SGD").value = "{{opt}}";
     var mathbox = mathBox({
         plugins: ['core', 'controls', 'cursor', 'mathbox'],
         controls: {klass: THREE.OrbitControls}
